--- a/WelcomeStyle.css
+++ b/WelcomeStyle.css
@@ -1,3 +1,10 @@
+/*
+PY2 - Vectorizacion de imagenes
+Kevin Jiménez Molinares 2021475925
+Sebastián López Herrera 2019053591
+Josafat Badilla Rodríguez 2020257662
+*/
+
 body {
     font-family: Arial, sans-serif;
     background-image: url("background.jpg");
